--- a/src/assets/less/foot.less
+++ b/src/assets/less/foot.less
@@ -16,8 +16,8 @@ body{background:#f5f5f5;}
 
 @font-face {
   font-family: 'second';
-  src:url('//at.alicdn.com/t/font_otyfvqmjwqshh0k9.woff') format('woff'),
-  url('//at.alicdn.com/t/font_otyfvqmjwqshh0k9.ttf') format('truetype')
+  src:url('//at.alicdn.com/t/font_491cauy45qfo5hfr.woff') format('woff'),
+  url('//at.alicdn.com/t/font_491cauy45qfo5hfr.ttf') format('truetype')
 }
 
 /*主页吸底*/
@@ -56,9 +56,9 @@ body{background:#f5f5f5;}
 .detail-foot .sign-up h4{line-height:16px;font-size:16px;color:#fff;font-weight:bold;margin:4px 0 2px 0;}
 .detail-foot .sign-up em{display:block;line-height:10px;font-size:10px;color:#fff;}
 .detail-foot .return,.menu,.comment .return,.menu,.footer .return{position:absolute;top:7px;width:36px;height:36px;border-radius:50%;border:0.5px solid #e5e5e5;display: -webkit-box;display: -ms-flexbox;display:flex;}
-.detail-foot .return,.comment .return,.footer .return{left:15px;}
+.detail-foot .return,.comment .return{left:15px;}
 .detail-foot .return:before,.footer .return:before{position:absolute;top:-6px;left:10px;font-family: 'second';content:"\5de6";font-size:12px;color:#999;}
-.detail-foot .menu,.comment .menu{right:15px;}
+.detail-foot .menu,.comment .menu,.footer .menu{right:15px;}
 .detail-foot .menu:before{position:absolute;top:-6px;left:11px;font-family: 'second';content:"\5355";color:#999;font-size:15px;}
 .comment .return:before{position:absolute;top:10px;left:10px;font-family: 'second';content:"\5de6";font-size:12px;color:#999;}
 .comment .menu:before{position:absolute;top:8px;left:11px;font-family: 'second';content:"\5355";color:#999;font-size:15px;}
@@ -86,13 +86,7 @@ body{background:#f5f5f5;}
 .footer .bidding{position:relative;display:block;width:85px;height:36px;line-height:36px;border-radius:18px;background:#f85200;font-size:16px;color:#fff;text-align:center;margin:7px 0 0 15px;}
 .footer .bidding:before{position:absolute;top:-15px;right:40px;width:6px;height:6px;content:"";border-right:1px solid #F85200;border-top:1px solid #f85200;background: rgba(255,255,255,0.95);-webkit-transform: rotate(136deg);transform: rotate(136deg);}
 
-/*倒计时弹层*/
-.countdown{position:relative;height:46px;margin:0 15px;padding:0 25px;background: rgba(255,255,255,0.95);border: 0.5px solid #F85200;box-shadow: 0px 1px 4px 0px rgba(248,81,0,0.40);border-radius: 3px;display: -webkit-box;display: -ms-flexbox;display:flex;}
-.countdown .present{font-size:12px;color:#999;-webkit-box-flex:1;-moz-box-flex: 1;-ms-flex:1;flex: 1;}
-.countdown em{display:block;font-size:16px;color:#f85200;}
-.countdown .timer{-webkit-box-flex:1;-moz-box-flex: 1;-ms-flex:1;flex: 1;}
-.countdown .timer i{display:block;font-size:12px;color:#999;}
-.countdown .timer span{font-size:16px;color:#f85200;}
+
 
 
 
