--- a/src/assets/less/secondHandCar.less
+++ b/src/assets/less/secondHandCar.less
@@ -191,9 +191,9 @@
 .same{background:#fff;margin-top:10px;}
 .same .title{height:44px;line-height:44px;border-bottom:1px solid #e5e5e5;padding-top:6px;}
 .same .title .change{display:block;width:200px;height:32px;line-height:32px;border-radius:16px;background:#eee;margin:0 auto;}
-.same .title .selected{display:inline-block;width:100px;height:32px;background:#f85200;font-size:16px;color:#fff;text-align:center;border-radius:16px;}
-.same .title .other{font-size:16px;color:#666;padding-left:16px;}
-
+.same .title .selected{background:#f85200;color:#fff;border-radius:16px;}
+.same .title .other{color:#666;}
+.same .title em{display:inline-block;width:100px;height:32px;font-size:16px;text-align:center; line-height: 32px;}
 /*图片说明*/
 .picture-list{background:#fff;}
 .picture-list li{text-align:center;padding-bottom:30px;}
